add translation blocks in templates

--- a/adverts/templates/adverts/change-password.html
+++ b/adverts/templates/adverts/change-password.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Changer mon mot de passe{% endblock %}
+{% load i18n %}
+
+{% block title %}{% translate "Change my password" %}{% endblock %}
 
 {% block content %} 
 
@@ -8,12 +10,12 @@
 
 <!--Change password--> 
 <div class="container py-5">
-    <h1>Changer mon mot de passe</h1>
+    <h1>{% translate "Change my password" %}</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-primary" type="submit">Mettre à jour</button>
+        <button class="btn btn-primary" type="submit">{% translate "Update" %}</button>
     </form>
-    <a href="{% url 'adverts:account' %}">Annuler</a>
+    <a href="{% url 'adverts:account' %}">{% translate "Cancel" %}</a>
 </div>
 {% endblock %}
