--- a/adverts/templates/includes/footer.html
+++ b/adverts/templates/includes/footer.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <style>
   #mainfooter {
     background-color: #D5BDAD;
@@ -5,5 +7,5 @@
   }
 </style>
 <footer class="footer mt-5 d-flex justify-content-center small" id="mainfooter">
-  <div class="fw-bold py-4">Copyright © 2022 | Immotep | Tous droits réservés</div>
+  <div class="fw-bold py-4">Copyright © 2022 | Immotep | {% translate "All rights reserved" %}</div>
 </footer>
