--- a/adverts/templates/adverts/details-advert.html
+++ b/adverts/templates/adverts/details-advert.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% load static %}
 
-{% block title %} Détail de l'annonce {% endblock %}
+{% block title %}{% translate "Details of the advert" %}{% endblock %}
 
 {% block content %} 
 
@@ -67,25 +69,25 @@
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon rounded-circle p-4 ms-3" aria-hidden="true"></span>
-                  <span class="visually-hidden">Précédent</span>
+                  <span class="visually-hidden">{% translate "Previous" %}</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#userAdvertCarousel" data-bs-slide="next">
                   <span class="carousel-control-next-icon rounded-circle p-4 me-3" aria-hidden="true"></span>
-                  <span class="visually-hidden">Suivant</span>
+                  <span class="visually-hidden">{% translate "Next" %}</span>
                 </button>
             </div>
         </div>
         <div class="col-5">
             <div class="py-4 ps-5 ms-4 avertInfoBlock">
-                <div class="fw-bold">Adresse</div>
-                <div class="mt-2">{{ advert_infos.street_number }} rue {{ advert_infos.street_name }}, {{ advert_infos.city }} ({{ advert_infos.postal_code }})</div>
+                <div class="fw-bold">{% translate "Address" %}</div>
+                <div class="mt-2">{{ advert_infos.street_number }} {{ advert_infos.street_name }}, {{ advert_infos.city }} ({{ advert_infos.postal_code }})</div>
             </div>
             <div class="py-4 ps-5 mt-4 ms-4 avertInfoBlock">
-                <div class="fw-bold">Propriétaire</div>
+                <div class="fw-bold">{% translate "Owner" %}</div>
                 <div class="mt-2">{{ advert_infos.creator }}</div>
-                <div class="fw-bold mt-3">Mail</div>
+                <div class="fw-bold mt-3">{% translate "Mail" %}</div>
                 <div class="mt-2">{{ advert_infos.creator.user.email}}</div>
-                <div class="fw-bold mt-3">Téléphone</div>
+                <div class="fw-bold mt-3">{% translate "Phone number" %}</div>
                 <div class="mt-2">{{ advert_infos.creator.phone_number }}</div>
             </div>
         </div>
@@ -95,23 +97,23 @@
             <div class="fw-bold h5">{{ advert_infos.service_type }} - {{ advert_infos.property_type }}</div>
             <div class="fw-bold h3">{{ advert_infos.price }} €</div>
         </div>
-        <div>{{ advert_infos.room_count }} pièce(s) - {{ advert_infos.bedroom_count }} chambre(s) - {{ advert_infos.surface }} m²</div>
+        <div>{% blocktranslate with room_c=advert_infos.room_count bedroom_c=advert_infos.bedroom_count surface=advert_infos.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
         <div> 
-            {% if advert_infos.is_furnished %}- Meublé{% endif %}
-            {% if advert_infos.has_balcony %}- Balcon {% endif %}
-            {% if advert_infos.has_terrace %}- Terasse {% endif %}
-            {% if advert_infos.has_elevator %}- Ascenseur {% endif %}
-            {% if advert_infos.has_parking %}- Parking -{% endif %}
+            {% if advert_infos.is_furnished %}- {% translate "Furnished" %}{% endif %}
+            {% if advert_infos.has_balcony %}- {% translate "Balcony" %} {% endif %}
+            {% if advert_infos.has_terrace %}- {% translate "Terrace" %} {% endif %}
+            {% if advert_infos.has_elevator %}- {% translate "Elevator" %} {% endif %}
+            {% if advert_infos.has_parking %}- {% translate "Parking" %} -{% endif %}
         </div>
         <div class="mt-4">
-            <div class="fw-bold h5">Description</div>
+            <div class="fw-bold h5">{% translate "Description" %}</div>
             <div class="mt-3">{{ advert_infos.description }}</div>
         </div>
         <div class="mt-4">
-            <div class="fw-bold h5">Consommation</div>
+            <div class="fw-bold h5">{% translate "Energy use" %}</div>
             <div class="mt-4 d-flex">
                 <div class="w-50 avertInfoBlock me-5 p-3 text-center small">
-                    <div>Diagnostic de performance énergétique (DPE)</div>
+                    <div>{% translate "Energy performance diagnosis (DPE)" %}</div>
                     <div class="mt-3 d-flex justify-content-center align-items-center">
                         {% for letter in "ABCDEFG" %}
                             <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.energy_use == letter %}active{% endif %}">{{ letter }}</div>
@@ -119,7 +121,7 @@
                     </div>
                 </div>
                 <div class="w-50 avertInfoBlock ms-5 p-3 text-center small">
-                    <div>Indice d'émission de gaz à effet de serre (GES)</div>
+                    <div>{% translate "Greenhouse gas emission index (GHG)" %}</div>
                     <div class="mt-3 d-flex justify-content-center align-items-center">
                         {% for letter in "ABCDEFG" %}
                             <div class="h4 fw-bold border border-dark p-2 {% if advert_infos.greenhouse_gas == letter %}active{% endif %}">{{ letter }}</div>
@@ -129,7 +131,7 @@
             </div>
             <div class="w-50 mt-5">
                 <div class="avertInfoBlock d-flex justify-content-around align-items-center me-5 p-3">
-                    <div>Garantie</div>
+                    <div>{% translate "Warranty" %}</div>
                     <div class="h3 mb-0">{{ advert_infos.warranty_deposit }} €</div>
                 </div>
             </div>
