--- a/adverts/templates/adverts/favories.html
+++ b/adverts/templates/adverts/favories.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Favories{% endblock %}
+
+{% load i18n %}
+
+{% load static %}
+
+{% block title %}{% translate "Favourites" %}{% endblock %}
+
 {% block content %}
 <style>
     .advertBlock {
@@ -15,54 +21,60 @@
         background-size: 60%;
     }
 
-    .advertBlock img {
-        border-radius: 15px 0 0 15px;
+    .advertBlock .carousel {
+        border-right: 2px solid #d5bdad;
     }
 
-    #adsSlider {
-        background-image: url('https://via.placeholder.com/450x750/c4fffd/8F8F8F?text=pub1');
-        background-size: 100% 100%;
+    .advertBlock .carousel-item {
+        border-radius: 15px 0 0 15px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: white;
+    }
+
+    .advertBlock .carousel-indicators {
+        background-color: rgba(0, 0, 0, 0.10);
+        width: fit-content;
+    }
+
+    .advertBlock .carousel-indicators .active {
+        background-color: #ffa970;
     }
 </style>
     <div class="container py-5">
         <div class="jumbotron py-100">
             <div class="container px-0">
-                <h4>Mes favoris</h4>
-                <div class="d-flex mt-2 mx-0">
-                    <div class="col-9 px-0 me-5">
+                <h4>{% translate "My favorites" %}</h4>
+                <div class="mt-2 mx-0">
+                    <div class="px-0 me-5">
                         {% for user_fav in user_favs %}
                             <div class="w-100 d-flex my-3 advertBlock">
                                 <div id="userAdvertCarousel{{ forloop.counter }}" class="carousel carousel-fade slide" data-bs-ride="carousel" data-bs-interval="false">
-                                    <div class="carousel-indicators">
-                                      <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                      <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                      <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <div class="carousel-indicators mx-auto rounded">
+                                        {% for i in user_fav.picture_count %}
+                                            <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.parentloop.counter}}" data-bs-slide-to="{{ i }}" {% if forloop.first %}class="active" aria-current="true"{% endif %} aria-label="Slide {{ forloop.counter }}"></button>
+                                        {% endfor %}
                                     </div>
                                     <div class="carousel-inner" style="width: 350px; height: 250px">
-                                      <div class="carousel-item active h-100">
-                                        <img src="https://resize-elle.ladmedia.fr/rcrop/638,,forcex/img/var/plain_site/storage/images/deco/pieces/petits-espaces/10-idees-d-amenagements-d-appartements-de-30-m2/95773946-5-fre-FR/10-idees-d-amenagements-d-appartements-de-30-m2.jpg" class="d-block w-100 h-100" alt="Image annonce 1">
-                                      </div>
-                                      <div class="carousel-item h-100">
-                                        <img src="https://static.cotemaison.fr/medias_11962/w_640,c_fill,g_north/sejour-avec-cuisine-et-salon-chambre-separee-par-une-verriere-noire_6124688.jpg" class="d-block w-100 h-100" alt="Image annonce 2">
-                                      </div>
-                                      <div class="carousel-item h-100">
-                                        <img src="https://storage.gra.cloud.ovh.net/v1/AUTH_e0b83750570d4ff1986fe199b41300e4/kimono/b9cdfed4e6b0f532ec6dbf1998c915f64df40ffa/600x370-fit-cover-orientation-0deg?width=600&height=370&fit=cover" class="d-block w-100 h-100" alt="Image annonce 3">
-                                      </div>
+                                        {% for picture in user_fav.pictures %}
+                                            <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ user_fav.id }}/{{ picture }}')"></div>
+                                        {% endfor %}
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="prev">
                                       <span class="carousel-control-prev-icon rounded-circle p-4 ms-3" aria-hidden="true"></span>
-                                      <span class="visually-hidden">Précédent</span>
+                                      <span class="visually-hidden">{% translate "Previous" %}</span>
                                     </button>
                                     <button class="carousel-control-next" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="next">
                                       <span class="carousel-control-next-icon rounded-circle p-4 me-3" aria-hidden="true"></span>
-                                      <span class="visually-hidden">Suivant</span>
+                                      <span class="visually-hidden">{% translate "Next" %}</span>
                                     </button>
                                 </div>
                                 <div class="px-5 d-flex flex-column justify-content-center w-100">
                                     {% if request.user.is_authenticated %}   
                                         <div class="d-flex justify-content-between">
                                             <div class="h3 my-auto">{{ user_fav.price }}€</div>
-                                            <a class="text-dark" href="{% url 'adverts:remove-favorite' user_fav.id %}" title="Supprimer des favoris">
+                                            <a class="text-dark" href="{% url 'adverts:remove-favorite' user_fav.id %}" title="{% translate "Delete from favorites" %}">
                                                 <i class="bi bi-heart-fill" style="font-size: 2rem"></i>
                                             </a>
                                         </div>
@@ -70,20 +82,19 @@
                                         <div class="h3">{{ user_fav.price }}€</div>
                                     {% endif %}
                                     <div class="fw-bold mb-2">{{ user_fav.service_type }} / {{ user_fav.property_type }}</div>
-                                    <div class="fw-bold">{{ user_fav.room_count }} pièce(s) - {{ user_fav.bedroom_count }} chambre(s) - {{ user_fav.surface }}m²</div>
+                                    <div class="fw-bold">{% blocktranslate with room_c=user_fav.room_count bedroom_c=user_fav.bedroom_count surface=user_fav.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
                                     <div class="fw-bold">
-                                        {% if user_fav.is_furnished %}Meublé{% endif %}
-                                        {% if user_fav.has_balcony %}Balcon{% endif %}
-                                        {% if user_fav.has_terrace %}Terasse{% endif %}
-                                        {% if user_fav.has_elevator %}Ascenseur{% endif %}
-                                        {% if user_fav.has_parking %}Parking{% endif %}
+                                        {% if user_fav.is_furnished %}{% translate "Furnished" %}{% endif %}
+                                        {% if user_fav.has_balcony %}{% translate "Balcony" %}{% endif %}
+                                        {% if user_fav.has_terrace %}{% translate "Terrace" %}{% endif %}
+                                        {% if user_fav.has_elevator %}{% translate "Elevator" %}{% endif %}
+                                        {% if user_fav.has_parking %}{% translate "Parking" %}{% endif %}
                                     </div>   
-                                    <div class="mt-2">{{ user_fav.street_number }} {{ user_fav.street_name }} à {{ user_fav.city }} ({{ user_fav.postal_code }})</div>  
+                                    <div class="mt-2">{{ user_fav.street_number }} {{ user_fav.street_name }}, {{ user_fav.city }} ({{ user_fav.postal_code }})</div>  
                                 </div>
                             </div>
                         {% endfor %}
                     </div>
-                    <div class="w-100 px-0 my-3" id="adsSlider"></div>
                 </div>
             </div>
         </div>
