--- a/adverts/templates/adverts/login.html
+++ b/adverts/templates/adverts/login.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
-{% block title %} Login {% endblock %}
-{% load crispy_forms_tags %}
-{% block content %}       
 
+{% load i18n %}
+
+{% block title %}{% translate "Login" %}{% endblock %}
+
+{% load crispy_forms_tags %}
+
+{% block content %}       
 <style>
   .borderCustom {
       border: 2px solid #D5BDAD;
@@ -23,7 +27,7 @@
     <div class="container">
         <form method="POST">
             <div class="row justify-content-center" >    
-              <h2 class="mt-2 mt-5 text-center">Connexion</h3>        
+              <h2 class="mt-2 mt-5 text-center">{% translate "Login" %}</h3>        
                 <div class="col-8 borderCustom mt-5 pt-5 pb-5"> 
                         <div class="row justify-content-center">
                             <div class="col-8 ">  
@@ -38,8 +42,8 @@
                         </div>
                     <div class="row justify-content-center">
                         <div class="col-8 text-center">
-                            <button type="submit" class="btn buttonCustom mt-5">Se connecter</button>
-                            <p class="text-center mt-3">Vous n'avez pas de compte ? <a href="{% url 'adverts:register' %}">S'inscrire</a>.</p> 
+                            <button type="submit" class="btn buttonCustom mt-5">{% translate "Log in" %}</button>
+                            <p class="text-center mt-3">{% translate "Don't have an account? " %}<a href="{% url 'adverts:register' %}">{% translate "Sign up" %}</a>.</p> 
                         </div>     
                     </div>
                 </div>
