--- a/adverts/templates/includes/messages.html
+++ b/adverts/templates/includes/messages.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% for message in messages %}
 <div class="container-fluid p-0">
   <div class="alert {{ message.tags }} alert-dismissible fade show mb-0" role="alert" >
