--- a/adverts/templates/adverts/base.html
+++ b/adverts/templates/adverts/base.html
@@ -38,7 +38,7 @@
   
 </head>
 
-<body class="{% block body_class %}{% endblock %} bg-gray-200 ">
+<body class="{% block body_class %}{% endblock %} bg-gray-200 d-flex flex-column min-vh-100">
   
   {% include 'includes/messages.html' %}
   
