--- a/adverts/templates/includes/footer.html
+++ b/adverts/templates/includes/footer.html
@@ -6,6 +6,6 @@
     color: #2A4252;
   }
 </style>
-<footer class="footer mt-5 d-flex justify-content-center small" id="mainfooter">
+<footer class="footer mt-auto d-flex justify-content-center small" id="mainfooter">
   <div class="fw-bold py-4">Copyright © 2022 | Immotep | {% translate "All rights reserved" %}</div>
 </footer>
