--- a/adverts/templates/adverts/change-password.html
+++ b/adverts/templates/adverts/change-password.html
@@ -24,10 +24,10 @@
   }
 </style>
 
-    <div class="container">
+    <div class="container py-5">
         <form method="POST">
             <div class="row justify-content-center" >    
-              <h1 class="mt-2 mt-5 text-center">{% translate "Change my password" %}</h1>        
+              <h1 class="text-center">{% translate "Change my password" %}</h1>        
                 <div class="col-8 borderCustom mt-5 pt-5 pb-5"> 
                         <div class="row justify-content-center">
                             <div class="col-8 ">  
