--- a/adverts/templates/adverts/change-password.html
+++ b/adverts/templates/adverts/change-password.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}{% translate "Login" %}{% endblock %}
+{% block title %}{% translate "Change my password" %}{% endblock %}
 
 {% load crispy_forms_tags %}
 
