--- a/adverts/templates/adverts/update_account.html
+++ b/adverts/templates/adverts/update_account.html
@@ -3,7 +3,7 @@
 
 {% load i18n %}
 
-{% block title %}{% translate "Register" %}{% endblock %}
+{% block title %}{% translate "Edit profile" %}{% endblock %}
 
 {% load crispy_forms_tags %}
 
