--- a/adverts/templates/adverts/update_advert_form.html
+++ b/adverts/templates/adverts/update_advert_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% translate "Create an advert" %}{% endblock %}
+{% block title %}{% translate "Edit an advert" %}{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <style>
