--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -82,7 +82,7 @@
                 <button type="submit">{% translate "Confirm" %}</button>
             </div>
             <div class="mt-5 mx-0">
-                <div class="px-0 me-5">
+                <div class="px-0">
                     {% for advert in adverts %}
                         <div class="w-100 d-flex my-4 advertBlock">
                             <div id="userAdvertCarousel{{ forloop.counter }}" class="carousel carousel-fade slide" data-bs-ride="carousel" data-bs-interval="false">
