Fixed margins advert forms

--- a/adverts/templates/adverts/create_advert_form.html
+++ b/adverts/templates/adverts/create_advert_form.html
@@ -24,10 +24,10 @@
 }
 </style>
 
-    <div class="container">
+    <div class="container py-5">
         <form method="POST" enctype="multipart/form-data">
             <div class="row justify-content-center" >            
-                <div class="col-8 borderCustom mt-5 pt-5 pb-5">
+                <div class="col-8 borderCustom py-5">
                     <h2 class="mt-2 mb-5 text-center">{% translate "You are one form away from advertising your property..." %}</h3>
                         <div class="row justify-content-center">
                             <div class="col-8 ">  
