--- a/adverts/templates/includes/navigation.html
+++ b/adverts/templates/includes/navigation.html
@@ -70,7 +70,7 @@
           <li class="dropdown " id="language-switcher">
             <form action="{% url 'adverts:set_language' %}" method="post">
                 {% csrf_token %}
-                <input name="next" type="hidden" value="/" />
+                <input name="next" type="hidden" value="{{ redirect_to }}" />
                 <select class="selectpicker" name="language" style="width: auto;" onchange="this.form.submit()">
                   {% get_current_language as LANGUAGE_CODE %}
                   {% get_available_languages as LANGUAGES %}
