--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -82,7 +82,7 @@
                             <input type="number" min="0" name="min-surface" id="min-surface">
                         </div>
                         <div class="filter f-right">
-                            <label for="max-surface">{% translate "Min surface." %}</label>
+                            <label for="max-surface">{% translate "Max surface." %}</label>
                             <input type="number" min="0" name="max-surface" id="max-surface">
                         </div>
                     </div>
