filters min-max

--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="filter">
                         <label for="type-purs">{% translate "Purchase type" %}</label>
-                        <select class="large" name="type-prop" id="type-prop">
+                        <select class="large" name="type-purs" id="type-purs">
                             <option value="">{% translate "All" %}</option>
                             <option value="location">{% translate "For rent" %}</option>
                             <option value="achat">{% translate "For Sale" %}</option>
