filters min-max

--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -57,7 +57,7 @@
                         <select class="large" name="type-prop" id="type-prop">
                             <option value="">{% translate "All" %}</option>
                             <option value="maison">{% translate "House" %}</option>
-                            <option value="appartemment">{% translate "Apartment" %}</option>
+                            <option value="appartement">{% translate "Apartment" %}</option>
                         </select>
                     </div>
                     <div class="filter">
